# flake-templates

./: README.md  flake.nix
haskell-executable/: README.md  flake.nix  project-name.cabal
haskell-executable/.github/workflows/: ci.yml
python-ds-stack/: flake.nix
scala-js/: flake.nix
